[package]
name = "imhottep"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "imhottep"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1.9"
hyper-tls = "0.6"
ansi-to-tui = "8.0.1"

[dev-dependencies]
tempfile = "3"
